# flipkart-product-recommendor-llmops

./: .dockerignore  .env.sample  Dockerfile  README.md  app.py  pyproject.toml
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
