[project]
name = "flipkart-product-recommendor-llmops"
version = "0.1.0"
description = ""
authors = [
    {name = "amaithi-sam",email = "amaithichirasan.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-astradb (>=1.0.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
